# pyhep2020-cxx-bindings

./: .gitignore  README.md  helpers.py  pyhep2020_c_cxx_bindings.ipynb  pyhep2020_cxx_bindings_final.ipynb
00_qgauss/: CMakeLists.txt
00_qgauss/src/: definitions.h  qgauss.c  qgauss.h
01_ldprofile_ctypes/: .gitignore  CMakeLists.txt  setup.py
01_ldprofile_ctypes/examples/: plot_profiles.py
01_ldprofile_ctypes/ldprofile_ctypes/: .gitignore  __init__.py  ct_api.py  library_helpers.py  profile.py
01_ldprofile_ctypes/src/ldprofile/: ld_coasting.cpp  ld_lin_interpol.h  ld_qgauss.cpp  ldprofile.h
02_ldprofile_pybind11/: .gitignore  CMakeLists.txt  pyproject.toml  setup.py
02_ldprofile_pybind11/cmake/: Findpybind11.cmake  SetupPybind11.cmake  SetupPybind11CMakeLists.txt.in
02_ldprofile_pybind11/examples/: plot_profiles.py  qgauss_dbl_harmonic_data.pkl
02_ldprofile_pybind11/src/: CMakeLists.txt
02_ldprofile_pybind11/src/ldprofile/: CMakeLists.txt  base_profile.h  ld_lin_interpol.h  qgauss.h
02_ldprofile_pybind11/src/wrap/: CMakeLists.txt  __init__.py  ldprofile_wrap.cpp  ldprofile_wrap.hpp
03_ldprofile_cppyy/: CMakeLists.txt
03_ldprofile_cppyy/src/: CMakeLists.txt
03_ldprofile_cppyy/src/ldprofile/: CMakeLists.txt  base_profile.cpp  definitions.h  ld_coasting.h  ld_lin_interpol.cpp  ld_qgauss.h  ldprofile_rflx.cpp  ldprofile_rflx_rdict.pcm  qgauss.cpp
src/: CMakeLists.txt
src/ldprofile/: CMakeLists.txt  base_profile.cpp  base_profile.hpp  ld_coasting.cpp  ld_coasting.h  ld_lin_interpol.cpp  ld_lin_interpol.h  ld_qgauss.cpp  ld_qgauss.h  qgauss.cpp  qgauss.h
